--- a/Barbershop.csproj
+++ b/Barbershop.csproj
@@ -138,6 +138,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Model\View_1.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="PageMain\AccountingPeriodPage.xaml.cs">
       <DependentUpon>AccountingPeriodPage.xaml</DependentUpon>
     </Compile>
